v.1.0.3 1.Добавлено окно загрузки. 2.Подключена библиотека RTC_DS3231 и есть вывод времени.

--- a/NRF24_RX/NRF24_RX/Debug/Makefile
+++ b/NRF24_RX/NRF24_RX/Debug/Makefile
@@ -42,6 +42,7 @@ C_SRCS +=  \
 ../mmc.c \
 ../NRF24.c \
 ../pff.c \
+../RTC_DS3231.c \
 ../SD.c \
 ../TWI.c \
 ../usart.c \
@@ -60,6 +61,7 @@ main.o \
 mmc.o \
 NRF24.o \
 pff.o \
+RTC_DS3231.o \
 SD.o \
 TWI.o \
 usart.o \
@@ -71,6 +73,7 @@ main.o \
 mmc.o \
 NRF24.o \
 pff.o \
+RTC_DS3231.o \
 SD.o \
 TWI.o \
 usart.o \
@@ -82,6 +85,7 @@ main.d \
 mmc.d \
 NRF24.d \
 pff.d \
+RTC_DS3231.d \
 SD.d \
 TWI.d \
 usart.d \
@@ -93,6 +97,7 @@ main.d \
 mmc.d \
 NRF24.d \
 pff.d \
+RTC_DS3231.d \
 SD.d \
 TWI.d \
 usart.d \
@@ -141,6 +146,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./pff.o: .././pff.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./RTC_DS3231.o: .././RTC_DS3231.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
