v.1.0.11 1. Подключены датчики BMP180 и DHT22 к приемнику + добавлены соответсвующие библиотеки. 2. Идет работа над интерфейсом главного окна приемника.

--- a/NRF24_RX/NRF24_RX/Debug/Makefile
+++ b/NRF24_RX/NRF24_RX/Debug/Makefile
@@ -37,6 +37,8 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../BMP180.c \
+../DHT22.c \
 ../LCD_12864.c \
 ../main.c \
 ../mmc.c \
@@ -56,6 +58,8 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+BMP180.o \
+DHT22.o \
 LCD_12864.o \
 main.o \
 mmc.o \
@@ -68,6 +72,8 @@ usart.o \
 WeatherStation.o
 
 OBJS_AS_ARGS +=  \
+BMP180.o \
+DHT22.o \
 LCD_12864.o \
 main.o \
 mmc.o \
@@ -80,6 +86,8 @@ usart.o \
 WeatherStation.o
 
 C_DEPS +=  \
+BMP180.d \
+DHT22.d \
 LCD_12864.d \
 main.d \
 mmc.d \
@@ -92,6 +100,8 @@ usart.d \
 WeatherStation.d
 
 C_DEPS_AS_ARGS +=  \
+BMP180.d \
+DHT22.d \
 LCD_12864.d \
 main.d \
 mmc.d \
@@ -117,6 +127,20 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./BMP180.o: .././BMP180.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./DHT22.o: .././DHT22.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./LCD_12864.o: .././LCD_12864.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
