v.1.2.12 Исправлены ошибки в android приложении

--- a/NRF24TX/NRF24TX/Debug/Makefile
+++ b/NRF24TX/NRF24TX/Debug/Makefile
@@ -39,8 +39,11 @@ SUBDIRS :=
 C_SRCS +=  \
 ../adc.c \
 ../DHT22.c \
+../DS18B20.c \
+../HTU21D.c \
 ../main.c \
 ../NRF24.c \
+../TWI.c \
 ../usart.c
 
 
@@ -53,29 +56,41 @@ ASM_SRCS +=
 OBJS +=  \
 adc.o \
 DHT22.o \
+DS18B20.o \
+HTU21D.o \
 main.o \
 NRF24.o \
+TWI.o \
 usart.o
 
 OBJS_AS_ARGS +=  \
 adc.o \
 DHT22.o \
+DS18B20.o \
+HTU21D.o \
 main.o \
 NRF24.o \
+TWI.o \
 usart.o
 
 C_DEPS +=  \
 adc.d \
 DHT22.d \
+DS18B20.d \
+HTU21D.d \
 main.d \
 NRF24.d \
+TWI.d \
 usart.d
 
 C_DEPS_AS_ARGS +=  \
 adc.d \
 DHT22.d \
+DS18B20.d \
+HTU21D.d \
 main.d \
 NRF24.d \
+TWI.d \
 usart.d
 
 OUTPUT_FILE_PATH +=NRF24TX.elf
@@ -106,6 +121,20 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
+./DS18B20.o: .././DS18B20.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./HTU21D.o: .././HTU21D.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./main.o: .././main.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -114,6 +143,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./NRF24.o: .././NRF24.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./TWI.o: .././TWI.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)D:\AtmelStudio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega8a -B "D:\AtmelStudio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega8a" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
